--- a/views/header.ejs
+++ b/views/header.ejs
@@ -8,16 +8,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    <a class="nav-link active" aria-current="page" href="/app148/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/users">Users</a>
+                    <a class="nav-link" href="/app148/users">Users</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/register">Register</a>
+                    <a class="nav-link" href="/app148/login">login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/logout">Logout</a>
+                    <a class="nav-link" href="/app148/register">Register</a>
+                </li>                
+                <li class="nav-item">
+                    <a class="nav-link" href="/app148/logout">Logout</a>
                 </li>
             </ul>
         </div>
