some basic feature
enogh for today, there a lot more work to do tomorrow

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -14,7 +14,7 @@
                     <a class="nav-link" href="/app148/users">Users</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/app148/login">login</a>
+                    <a class="nav-link" href="/app148/login">Login</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/app148/register">Register</a>
