--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
           <h1 class="display-4 fw-bold mb-4">Üdvözöljük a TechCorp-nál!</h1>
           <p class="lead mb-4">Innovatív technológiai megoldásokkal segítjük üzleti sikerét. Minőségi szolgáltatásunkkal
             és tapasztalt csapatunkkal az Ön megbízható partnere vagyunk.</p>
-          <a href="/contact" class="btn btn-light btn-lg">Lépjen kapcsolatba velünk</a>
+          <a href="/app148/contact" class="btn btn-light btn-lg">Lépjen kapcsolatba velünk</a>
         </div>
         <div class="col-lg-6 text-center">
           <i class="bi bi-laptop" style="font-size: 15rem; opacity: 0.3;"></i>
