--- a/views/header.ejs
+++ b/views/header.ejs
@@ -14,13 +14,16 @@
                     <a class="nav-link" href="/app148/users">Users</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/app148/login">Login</a>
+                    <a class="nav-link" href="/app148/register">Register</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/app148/register">Register</a>
-                </li>                
+                    <a class="nav-link" href="/app148/login">Login</a>
+                </li>	
                 <li class="nav-item">
                     <a class="nav-link" href="/app148/logout">Logout</a>
+                </li>				
+                <li class="nav-item">
+                    <a class="nav-link" href="/app148/crud">Crud</a>
                 </li>
             </ul>
         </div>
